# dd_phase_optimization

./: .gitignore  2025-06-05_environment.yml  FWHM_cal.py  FullAxiconGenerator.py  PhaseMaskNorm.py  RotateImage.py  RunPhaseMaskNorm.sh  RunProfilerInference.py  RunProfilerInference.sh  beam_profile_gen.py  beam_profile_ryan.py  beam_profiler.py  bessel.py  cnn_inference.py  cnn_utils_unet.py  code_dump_to_txt.py  config.yaml  cuda_debug.sh  cuda_error.py  data_utils.py  environment_ryan.yml  fwhm.py  mask_inference.py  mask_learning.py  mask_learning.sh  metrics.py  notes  physics_inference.py  physics_utils.py  physics_utils_copy.py  portable_env_2025-06-05.yml  psf_gen.py  psf_z.mat  psf_z.txt  pyproject.toml  submit_PhaseMaskNorm.sh  submit_RunProfilerInference.sh  submit_mask_learning.sh  tiff2png.py
data/: datasets.py  generators.py  io.py  preprocessing.py  psf_gen.py  psf_gen_old.py  transforms.py
models/: unet.py  wrappers.py
physics/: axicon_mask.py  masks.py  phase_mask_norm.py  simulation.py  wrappers.py
scripts/lsf/: submit_training.sh  train_job.bsub
training/: data_generator.py  training.py
utils/: debug.py
